2001-03-17 Joseph Wenninger <jowenn@bigfoot.com>
        * Syntaxhighlighting is now defined in cpp.xml, c.xml html.xml ...
          instead of a global syntax.xml.
          (Not ported completely yet)
        * Some simple reg expression work (see html.xml)

2001-03-17 Christoph Cullmann <crossfire@babylon2k.de>
        * moved textfilter stuff to a own plugin "textfilter"
        * cleaned up kantmainwindow.*

2001-03-16 Christoph Cullmann <crossfire@babylon2k.de>
        * search dialog comes up with selected text
        * backport of some KDevelop KWrite patches ;)

2001-03-15 Christoph Cullmann <crossfire@babylon2k.de>
        * kantpart finished
        * new kwrite using kantpart
        * removed old kwrite and kwritepart !
        * fixed menu and toolbar problems of the new KWrite app

2001-03-11 Christoph Cullmann <crossfire@babylon2k.de>
        * kwrite stuff merged into kant !!!!!

2001-03-04 Christoph Cullmann <crossfire@babylon2k.de>
        * mutiple mainwindows
        * fileist, sync for all mainwindows, all open docs listed

2001-03-03 Christoph Cullmann <crossfire@babylon2k.de>
        * session managment (Anders Lund)
        * removed some debug stuff

2001-02-26 Joseph Wenninger <jowenn@bigfoot.com>
        * First step for a plugin management dialog page
          Soon to come

2001-02-26 Christoph Cullmann <crossfire@babylon2k.de>
        * Kant is a part of kdebase :)
          sourceforge.net CVS won't be used in the future

2001-02-24 Phlip <phlip_cpp@my-deja.com>
        * HTML button - select text, hit <Ctrl+Dash>, and enter the fields
          for an SGML tag. Don't enter the < > or closing tag. We put these
          around the selected text, and [try to] re-select that text so you can add
          another nested tag right away. We are now the first HTML editor
          that's actually better than Notepad! Hours of fun.

        * Filter - select text, hit <Ctrl+Backslash>, and enter an OS command.