@@ -1,4 +1,4 @@
-SUBDIRS = document view app console data filelist fileselector mainwindow pics project sidebar interfaces pluginmanager main part plugins
+SUBDIRS = document view app console data filelist fileselector mainwindow pics project sidebar interfaces pluginmanager factory main part plugins
 EXTRA_DIST = piper AUTHORS COPYING ChangeLog NEWS README TODO
 
 messages: rc.cpp
