@@ -1,0 +1,8 @@
+<!DOCTYPE kpartgui>
+<kpartplugin name="kantopenheader" library="libkantopenheaderplugin" version="1">
+<MenuBar>
+ <Menu name="file"><Text>&amp;File</Text>
+    <Action name="file_openheader" />
+ </Menu>
+</MenuBar>
+</kpartplugin>
